--- a/AdAp-Design/public/css/styles.css
+++ b/AdAp-Design/public/css/styles.css
@@ -32,6 +32,16 @@ body {
     width: 100%;
 }
 
+.poster-publish{
+    max-width: 900px;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 0;
+    padding-bottom: 0;
+    left:0;
+    right: 0;
+}
+
 .poster-block{
     padding-left: 5px;
     padding-right: 5px;
