Implemented login/registrer & changed app's structure

--- a/AdApp/app/common/views/footer.html
+++ b/AdApp/app/common/views/footer.html
@@ -1,7 +1,7 @@
 <div class="row panel-footer footer">
     <div class="col-xs-2">
         <a href="https://github.com/Y-LyN-10/AdAp-AngularJS-Course-Project">
-            <img src="../../assets/img/github-fork-me.png" class="fork-ribbon-git" alt=""/>
+            <img src="../../../assets/img/github-fork-me.png" class="fork-ribbon-git" alt=""/>
         </a>
     </div>
     <div class="col-xs-7 footer-text">
@@ -11,6 +11,6 @@
         </div>
     </div>
     <div class="col-xs-2 footer-ng-logo pull-right">
-        <img src="../../assets/img/angularjs-logo-small.png" class="img-responsive" alt=""/>
+        <img src="../../../assets/img/angularjs-logo-small.png" class="img-responsive" alt=""/>
     </div>
 </div>
