--- a/AdApp/app/account/views/login.html
+++ b/AdApp/app/account/views/login.html
@@ -10,14 +10,14 @@
                     <div class="modal-body">
                         <form class="form col-md-12 center-block">
                             <div class="form-group">
-                                <input type="text" class="form-control input-lg" placeholder="Username">
+                                <input type="text" class="form-control input-lg" id="username" ng-model="userData.username" placeholder="Username" required>
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control input-lg" placeholder="Password">
+                                <input type="password" class="form-control input-lg" id="password" ng-model="userData.password" placeholder="Password" required>
                             </div>
                             <div class="form-group">
-                                <button class="btn btn-primary btn-lg btn-block">Sign In</button>
-                                <span class="text-center"><a href="/#/register" class="pull-right  ">or Register here</a></span>
+                                <button class="btn btn-primary btn-lg btn-block" ng-click="login(userData)">Sign In</button>
+                                <span class="text-center"><a href="#/register" class="pull-right  ">or Register here</a></span>
                             </div>
                         </form>
                     </div>
