--- a/AdApp/app/account/views/register.html
+++ b/AdApp/app/account/views/register.html
@@ -11,40 +11,37 @@
                         <form class="form center-block">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control input-lg" placeholder="Name">
+                                    <input type="text" id="name" ng-model="userData.name" class="form-control input-lg"  placeholder="Name" required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control input-lg" placeholder="Username">
+                                    <input type="text" id="username" ng-model="userData.username" class="form-control input-lg" placeholder="Username" required>
                                 </div>
                                 <hr/>
                                 <div class="form-group">
-                                    <input type="text" class="form-control input-lg" placeholder="Email">
+                                    <input type="text" id="email" ng-model="userData.email" class="form-control input-lg" placeholder="Email" required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control input-lg" placeholder="Phone">
+                                    <input type="text" id="phone" ng-model="userData.phone" class="form-control input-lg" placeholder="Phone" required>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input type="password" class="form-control input-lg" placeholder="Password">
+                                    <input type="password" id="password" ng-model="userData.password" class="form-control input-lg" placeholder="Password" required>
                                 </div>
                                 <div class="form-group ">
-                                    <input type="password" class="form-control input-lg" placeholder="Confirm Password">
+                                    <input type="password" id="confirmPassword" ng-model="userData.confirmPassword" class="form-control input-lg" placeholder="Confirm Password">
                                 </div>
                                 <hr/>
                                 <div class="form-group">
-                                    <select class="form-control input-lg">
-                                        <option value="Sofia">Sofia</option>
-                                        <option value="Varna">Varna</option>
-                                        <option value="Plovdiv">Plovdiv</option>
-                                        <option value="Ruse">Ruse</option>
-                                        <option value="Other">Other</option>
+                                    <select class="form-control input-lg" id="town">
+                                        <option value="null">Select Town</option>
+                                        <option value="1">Sofia</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
-                                    <button class="btn btn-primary btn-lg btn-block">Sign Up</button>
+                                    <button class="btn btn-primary btn-lg btn-block" ng-click="register(userData)">Sign Up</button>
                                 </div>
-                                <span class="text-center"><a href="/#/login" class="pull-right  ">or Login here</a></span>
+                                <span class="text-center"><a href="#/login" class="pull-right">or Login here</a></span>
                             </div>
                         </form>
                     </div>
