--- a/AdApp/app/common/views/header.html
+++ b/AdApp/app/common/views/header.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"></button>
-            <a href="#/" class="navbar-brand"><img src="../../assets/img/adap-logo-small.png" alt=""/></a>
+            <a href="#/" class="navbar-brand"><img src="../../../assets/img/adap-logo-small.png" alt=""/></a>
         </div>
         <div id="navbar-menu" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
