--- a/AdApp/app/public/views/public-ad.html
+++ b/AdApp/app/public/views/public-ad.html
@@ -4,7 +4,7 @@
 
         <div class="row poster-img-data">
             <div class="col-xs-6">
-                <img src="../../../../assets/img/bus-driver.jpg" class="img-thumbnail"/>
+                <img src="../../../assets/img/bus-driver.jpg" class="img-thumbnail"/>
             </div>
             <div class="col-xs-6 row">
                 <ul class="list-group poster-main-data-list">
