List categories and towns plus minor style changes

--- a/AdApp/app/common/views/home.html
+++ b/AdApp/app/common/views/home.html
@@ -1,14 +1,20 @@
-<div class='col-sm-2'>
-    <div ng-include="'app/common/views/sidebar.html'"></div>
+<div class='col-sm-2 hidden-sm hidden-xs' ng-controller="SidebarController">
+    <div ng-include="'app/common/views/categories-sidebar.html'"></div>
+    <hr/>
 </div>
 
-<div class='col-sm-10'>
+<div class='col-sm-8'>
 
-    <div class="row" id='app-content'>
+    <div class="row center-block" id='app-content'>
         <div ng-include="'app/public/views/public-ad.html'"></div>
     </div>
     <!-- row -->
     <hr class="middle-hr">
     <div ng-include="'app/common/views/pagination.html'"></div>
     <hr>
+</div>
+
+<div class='col-sm-2 hidden-sm hidden-xs' ng-controller="SidebarController">
+    <div ng-include="'app/common/views/towns-sidebar.html'"></div>
+    <hr/>
 </div>
