--- a/AdApp/app/public/views/public-ad.html
+++ b/AdApp/app/public/views/public-ad.html
@@ -1,7 +1,6 @@
-<div class="col-md-4 poster-block">
-    <div class="col-xs-12 panel panel-default poster">
+<div class="col-md-6 poster-block">
+    <div class="col-xs-12 panel panel-default poster center-block">
         <div class="panel-heading"><strong>Public View - Title</strong></div>
-
         <div class="row poster-img-data">
             <div class="col-xs-6">
                 <img src="../../../assets/img/bus-driver.jpg" class="img-thumbnail"/>
