--- a/AdApp/assets/css/app-styles.css
+++ b/AdApp/assets/css/app-styles.css
@@ -43,14 +43,18 @@ body {
 }
 
 .poster-block{
+    max-width: 500px;
     padding-left: 5px;
-    padding-right: 5px;
-    margin-right: 0;
+}
+
+.panel-sidebar{
+    min-width: 150px;
 }
 
 .poster{
     margin: 0;
     padding: 0;
+    align-items: center;
 }
 
 .poster > .glyphicon{
