Fixed a lot of ultra-annoying responsive-design details

--- a/AdApp/app/common/views/home.html
+++ b/AdApp/app/common/views/home.html
@@ -1,11 +1,10 @@
-<div class='col-sm-2 hidden-sm hidden-xs' ng-controller="SidebarController">
+<div class='col-md-2 hidden-sm hidden-xs' ng-controller="SidebarController">
     <div ng-include="'app/common/views/categories-sidebar.html'"></div>
     <hr/>
 </div>
 
-<div class='col-sm-8'>
-
-    <div class="row center-block" id='app-content'>
+<div class='col-md-8 col-sm-12 col-xs-12'>
+    <div class="row" id='app-content'>
         <div ng-include="'app/public/views/public-ad.html'"></div>
     </div>
     <!-- row -->
@@ -14,7 +13,7 @@
     <hr>
 </div>
 
-<div class='col-sm-2 hidden-sm hidden-xs' ng-controller="SidebarController">
+<div class='col-md-2 hidden-sm hidden-xs' ng-controller="SidebarController">
     <div ng-include="'app/common/views/towns-sidebar.html'"></div>
     <hr/>
 </div>
