--- a/AdApp/app/common/views/header.html
+++ b/AdApp/app/common/views/header.html
@@ -4,10 +4,10 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"></button>
             <a href="#/" class="navbar-brand"><img src="../../../assets/img/adap-logo-small.png" alt=""/></a>
         </div>
-        <div id="navbar-menu" class="collapse navbar-collapse">
+        <div id="navbar-menu" class="collapse navbar-collapse ">
             <ul class="nav navbar-nav">
                 <li role="presentation"><a href="#/">Home</a></li>
-                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <b class="caret"></b></a>
+                <li><a href="#" class="dropdown-toggle visible-xs visible-sm hidden-md hidden-lg" data-toggle="dropdown">Categories <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Cars</a></li>
                         <li><a href="#">Fashion</a></li>
@@ -15,7 +15,7 @@
                         <li><a href="#">Others</a></li>
                     </ul>
                 </li>
-                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Towns <b class="caret"></b></a>
+                <li><a href="#" class="dropdown-toggle visible-xs visible-sm hidden-md hidden-lg" data-toggle="dropdown">Towns <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Sofia</a></li>
                         <li><a href="#">Varna</a></li>
