--- a/AdApp/app/common/views/header.html
+++ b/AdApp/app/common/views/header.html
@@ -4,23 +4,37 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"></button>
             <a href="#/" class="navbar-brand"><img src="../../../assets/img/adap-logo-small.png" alt=""/></a>
         </div>
-        <div id="navbar-menu" class="collapse navbar-collapse ">
+        <div id="navbar-menu" class="collapse navbar-collapse" ng-controller="SidebarController">
             <ul class="nav navbar-nav">
                 <li role="presentation"><a href="#/">Home</a></li>
-                <li><a href="#" class="dropdown-toggle visible-xs visible-sm hidden-md hidden-lg" data-toggle="dropdown">Categories <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Cars</a></li>
-                        <li><a href="#">Fashion</a></li>
-                        <li><a href="#">Electronics</a></li>
-                        <li><a href="#">Others</a></li>
+                <li><a href="" class="dropdown-toggle visible-xs visible-sm hidden-md hidden-lg" data-toggle="dropdown">Categories<b class="caret"></b></a>
+                    <ul class="dropdown-menu dropdown-list">
+                        <li class="dropdown-list-item"
+                            ng-class="{'selected' : selectedCategoryId == null}"
+                            ng-click="categoryClicked(null)">
+                            All
+                        </li>
+                        <li class="dropdown-list-item"
+                            ng-repeat="category in categories"
+                            ng-click="categoryClicked(category.id)"
+                            ng-class="{'selected' : selectedCategoryId == category.id}">
+                            {{category.name}}
+                        </li>
                     </ul>
                 </li>
-                <li><a href="#" class="dropdown-toggle visible-xs visible-sm hidden-md hidden-lg" data-toggle="dropdown">Towns <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Sofia</a></li>
-                        <li><a href="#">Varna</a></li>
-                        <li><a href="#">Plovdiv</a></li>
-                        <li><a href="#">Ruse</a></li>
+                <li><a href="#" class="dropdown-toggle visible-xs visible-sm hidden-md hidden-lg" data-toggle="dropdown">Towns<b class="caret"></b></a>
+                    <ul class="dropdown-menu dropdown-list">
+                        <li class="dropdown-list-item"
+                            ng-class="{'selected' : selectedTownId == null}"
+                            ng-click="townClicked(null)">
+                            All
+                        </li>
+                        <li class="dropdown-list-item"
+                            ng-repeat="town in towns"
+                            ng-click="townClicked(town.id)"
+                            ng-class="{'selected' : selectedTownId == town.id}">
+                            {{town.name}}
+                        </li>
                     </ul>
                 </li>
             </ul>
