List all ads, filtering by town & category works too

--- a/AdApp/app/common/views/home.html
+++ b/AdApp/app/common/views/home.html
@@ -4,8 +4,8 @@
 </div>
 
 <div class='col-md-8 col-sm-12 col-xs-12'>
-    <div class="row" id='app-content'>
-        <div ng-include="'app/public/views/public-ad.html'"></div>
+    <div class="row" id='app-content' ng-controller="HomeController">
+        <div ng-include="'app/common/views/ad.html'"></div>
     </div>
     <!-- row -->
     <hr class="middle-hr">
