--- a/AdApp/app/admin/views/admin-ad.html
+++ b/AdApp/app/admin/views/admin-ad.html
@@ -6,7 +6,7 @@
         <div class="panel-heading"><strong>Admin Ad View - Title</strong></div>
         <div class="row poster-img-data">
             <div class="col-xs-6">
-                <img src="../../../../assets/img/bus-driver.jpg" class="img-thumbnail"/>
+                <img src="../../../assets/img/bus-driver.jpg" class="img-thumbnail"/>
 
                 <div class="text-center change-ad-status left-col-btn">
                     <a href="#" class="btn btn-success center-block disabled"><span
