--- a/AdApp/app/admin/views/list-towns.html
+++ b/AdApp/app/admin/views/list-towns.html
@@ -11,7 +11,7 @@
             <td>{{town.username}}</td>
             <td class="text-center">
                 <a href="#" class="btn btn-sm btn-warning glyphicon glyphicon-pencil"></a>
-                <a href="#" class="btn btn-sm btn-danger glyphicon glyphicon-remove"></a>
+                <a href="#" ng-click="deleteTown(town.id)" class="btn btn-sm btn-danger glyphicon glyphicon-remove"></a>
             </td>
         </tr>
     </table>
