--- a/AdApp/app/admin/views/list-users.html
+++ b/AdApp/app/admin/views/list-users.html
@@ -15,7 +15,7 @@
                 <td>{{user.phoneNumber}}</td>
                 <td class="text-center">
                     <a href="#" class="btn btn-sm btn-warning glyphicon glyphicon-pencil"></a>
-                    <a href="#" class="btn btn-sm btn-danger glyphicon glyphicon-remove"></a>
+                    <a type="button" ng-click="deleteUser(user.id)" class="btn btn-sm btn-danger glyphicon glyphicon-remove"></a>
                 </td>
             </tr>
         </table>
