--- a/AdApp/app/admin/views/admin-ad.html
+++ b/AdApp/app/admin/views/admin-ad.html
@@ -1,59 +1,56 @@
-<div class="col-xs-4 poster-block">
-    <div class="col-xs-12 panel panel-default poster">
-        <a href="#" class="btn btn-sm btn-danger glyphicon glyphicon-remove pull-right"></a>
-        <a href="#" class="btn btn-sm btn-warning glyphicon glyphicon-pencil pull-right"></a>
-
-        <div class="panel-heading"><strong>Admin Ad View - Title</strong></div>
-        <div class="row poster-img-data">
-            <div class="col-xs-6">
-                <img src="../../../assets/img/bus-driver.jpg" class="img-thumbnail"/>
-
-                <div class="text-center change-ad-status left-col-btn">
-                    <a href="#" class="btn btn-success center-block disabled"><span
-                            class="glyphicon glyphicon-thumbs-up"> Approve</span></a>
-                    <a href="#" class="btn btn-danger center-block"><span class="glyphicon glyphicon-thumbs-down"> Reject</span></a>
+<div>
+    <div class="row">
+        <div class="col-sm-6 poster-block center-block" ng-repeat="ad in ads.ads">
+            <div class="panel panel-default poster" data-id="{{ad.id}}">
+                <a href="#" class="btn btn-sm btn-danger glyphicon glyphicon-remove pull-right"></a>
+                <a href="#" class="btn btn-sm btn-warning glyphicon glyphicon-pencil pull-right"></a>
+                <div class="panel-heading"><strong>{{ad.title}}</strong></div>
+                <div class="row poster-img-data">
+                    <div class="col-sm-6 col-xs-12">
+                        <img ng-src="{{ad.imageDataUrl}}" class="img-thumbnail"/>
+                        <div class="text-center change-ad-status left-col-btn">
+                            <a button ng-click="approveAd(ad.id);" class="btn btn-success center-block"><span
+                                    class="glyphicon glyphicon-thumbs-up"> Approve</span></a>
+                            <a button ng-click="rejectAd(ad.id);" class="btn btn-danger center-block"><span class="glyphicon glyphicon-thumbs-down"> Reject</span></a>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-xs-12">
+                        <ul class="list-group poster-main-data-list">
+                            <li class="list-group-item">
+                                <strong>Name: </strong>
+                                <span>{{ad.ownerName}}</span>
+                            </li>
+                            <li class="list-group-item">
+                                <strong>Username: </strong>
+                                <span>{{ad.ownerUsername}}</span>
+                            </li>
+                            <li class="list-group-item">
+                                <strong>Email: </strong>
+                                <a href="mailto:{{ad.ownerEmail}}">{{ad.ownerEmail}}</a>
+                            </li>
+                            <li class="list-group-item">
+                                <strong>Tel: </strong>
+                                <span>{{ad.ownerPhone}}</span>
+                            </li>
+                            <li class="list-group-item">
+                                <strong>Category: </strong>
+                                <span data-id="{{ad.categoryId}}">{{ad.categoryName}}</span>
+                            </li>
+                            <li class="list-group-item">
+                                <strong>Ad Status: </strong>
+                                <span>{{ad.status}}</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <p>{{ad.text}}</p>
+                    <span class="pull-right" style="margin-top: 7px;"><strong>Published on:</strong>{{ad.date | date:'dd-MMM-yyyy'}}</span>
+                </div>
+                <div class="panel-footer">
+                    <button class="btn btn-default hidden">Read More</button>
                 </div>
             </div>
-            <div class="col-xs-6 row">
-                <ul class="list-group poster-main-data-list">
-                    <li class="list-group-item">
-                        <strong>Name: </strong>
-                        <span>Maria</span>
-                    </li>
-
-                    <li class="list-group-item">
-                        <strong>Email: </strong>
-                        <a href="mailto:maria@gmail.com">maria@gmail.com</a>
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Tel: </strong>
-                        <span>+359 891 285429</span>
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Category: </strong>
-                        <span>Other</span>
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Town: </strong>
-                        <span>Plovdiv</span>
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Status: </strong>
-                        <span>Approved</span>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="panel-body">
-            <p>Driver with D1 license needed ASAP for approximately 2 hours per day, 5
-                days a week collecting children with a staff member from local schools and dropping back
-                to
-                afterschool facility. Occasional weekend work can be offered also.
-            </p>
-        </div>
-        <div class="panel-footer">
-            <span class="pull-right" style="margin-top: 7px;"><strong>Published on:</strong> 27-Dec-2014</span>
-            <button class="btn btn-default">Read More</button>
         </div>
     </div>
 </div>
