--- a/AdApp/app/common/views/home.html
+++ b/AdApp/app/common/views/home.html
@@ -4,8 +4,11 @@
 </div>
 
 <div class='col-md-8 col-sm-12 col-xs-12'>
-    <div class="row" id='app-content' ng-controller="HomeController">
+    <div ng-if="!authService.isAdmin()" class="row" id='app-content' ng-controller="HomeController">
         <div ng-include="'app/common/views/ad.html'"></div>
+    </div>
+    <div ng-if="authService.isAdmin()" class="row" id='app-content' ng-controller="AdminAdsController">
+        <div ng-include="'app/admin/views/admin-ad.html'"></div>
     </div>
     <!-- row -->
     <hr class="middle-hr">
